partial/force-app/main/default/objects/Vendor__c/fields/Etag__c.field-meta.xml
<CustomField>
    <fullName>Etag__c</fullName>
    <label>Etag</label>
    <length>100</length>
    <type>Text</type>
</CustomField>