partial/force-app/main/default/objects/Vendor__c/fields/From_Archive__c.field-meta.xml
<CustomField>
    <fullName>From_Archive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>From Archive</label>
    <type>Checkbox</type>
</CustomField>