partial/force-app/main/default/objects/Vendor__c/fields/Last_Call__c.field-meta.xml
<CustomField>
    <fullName>Last_Call__c</fullName>
    <label>Last Call</label>
    <type>Date</type>
</CustomField>