partial/force-app/main/default/objects/Vendor__c/fields/Negotiator_Id__c.field-meta.xml
<CustomField>
    <fullName>Negotiator_Id__c</fullName>
    <label>Negotiator Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>