partial/force-app/main/default/objects/Vendor__c/fields/Office_Id__c.field-meta.xml
<CustomField>
    <fullName>Office_Id__c</fullName>
    <label>Office Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>