partial/force-app/main/default/objects/Vendor__c/fields/Property_Reapit_Id__c.field-meta.xml
<CustomField>
    <fullName>Property_Reapit_Id__c</fullName>
    <label>Property Reapit Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>