partial/force-app/main/default/objects/Vendor__c/fields/Relation_Checked__c.field-meta.xml
<CustomField>
    <fullName>Relation_Checked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Relation Checked</label>
    <type>Checkbox</type>
</CustomField>