partial/force-app/main/default/objects/Vendor__c/fields/Selling_Reason_Id__c.field-meta.xml
<CustomField>
    <fullName>Selling_Reason_Id__c</fullName>
    <label>Selling Reason Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>