partial/force-app/main/default/objects/Vendor__c/fields/Solicitor_Id__c.field-meta.xml
<CustomField>
    <fullName>Solicitor_Id__c</fullName>
    <label>Solicitor Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>