partial/force-app/main/default/objects/Vendor__c/fields/Type_Id__c.field-meta.xml
<CustomField>
    <fullName>Type_Id__c</fullName>
    <label>Type Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>