partial/force-app/main/default/objects/Vendor__c/fields/Unit_Id__c.field-meta.xml
<CustomField>
    <fullName>Unit_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit Id</label>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>Vendors</relationshipLabel>
    <relationshipName>Vendors</relationshipName>
    <type>Lookup</type>
</CustomField>