partial/force-app/main/default/objects/Vendor__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Solicitor_Id__c</columns>
    <columns>Source_Id__c</columns>
    <columns>Type_Id__c</columns>
    <columns>Reapit_Id__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Relation_Checked__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>